Improve support for running modular applications